[package]
name = "bell_system"
version = "0.0.1"
edition = "2021"
authors = ["Ronaldson Bellande <ronaldsonbellande@gmail.com>"]
description = "Advanced privilege escalation system with multi-level security and compliance features"
license = "GPL-3.0-or-later"
repository = "https://github.com/Architecture-Mechanism/bell"
documentation = "https://bellande-architecture-mechanism-research-innovation-center.org/bell/docs"
readme = "README.md"
keywords = ["privilege-escalation", "security", "authentication", "system", "bellande_bell_system"]
categories = ["command-line-utilities", "authentication"]

[lib]
name = "bell"
path = "src/bell.rs"

[dependencies]
# Core async runtime
tokio = { version = "1.28", features = ["full"] }

# Command line parsing
structopt = "0.3.26"

# Logging and monitoring
log = "0.4.17"
log4rs = "1.2.0"
sysinfo = "0.29"

# Error handling
thiserror = "1.0.40"
anyhow = "1.0"

# System interaction
nix = "0.26.2"
libc = { version = "0.2.144", features = ["extra_traits"] }
libseccomp = "0.3"
syscallz = "0.17"

# Authentication and security
totp-rs = { version = "5.0.2", features = ["gen_secret"] }
rand = "0.8.5"
rand_core = "0.6.4"
argon2 = { version = "0.5", features = ["std", "password-hash"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Serialization and configuration
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.3"

# Email
lettre = { version = "0.10", features = ["rustls-tls", "smtp-transport"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Cryptography
aes-gcm = { version = "0.10.1", features = ["std"] }
sha2 = "0.10.6"

# Networking
ipnetwork = "0.20.0"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
walkdir = "2.4"
regex = "1.5"
local-ip-address = "0.5"
base64 = "0.21"

[target.'cfg(unix)'.dependencies]
users = "0.11.0"

[features]
default = ["standard"]
standard = []
enterprise = ["hsm", "advanced-audit", "network-isolation"]
hsm = []
advanced-audit = []
network-isolation = []

[package.metadata.bellande]
organization = "Architecture-Mechanism"
project-type = "system-security"
supported-os = ["bellandeos", "linux", "macos"]
minimum-rust-version = "1.70.0"
security-contact = "security@bellande-architecture-mechanism-research-innovation-center.org"
